--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'    //add
-    implementation 'com.jayway.restassured:rest-assured:2.9.0'   //add
+    implementation 'io.rest-assured:rest-assured:4.5.1'
 }
 
 test {
